fix allof issues
